<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/bills_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:titleTextColor="@color/colorAccent" />

    <EditText
        android:id="@+id/bills_add_bill_name_editText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textCapWords"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/enter_bill_name"/>

    <EditText
        android:id="@+id/bills_add_bill_amount_editText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="numberDecimal"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/enter_bill_amount"/>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/bills_add_due_date_textView"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Jul, 15 2017"/>


        <Button
            android:id="@+id/bills_add_pick_date_button"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="40"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bills_add_cancel_button"
            android:layout_weight="40"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <TextView
            android:visibility="invisible"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bills_add_submit_button"
            android:layout_weight="40"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>
    </LinearLayout>

</LinearLayout>